Fixed sizing on mobile

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -143,6 +143,14 @@ section {
     margin-right: 20%;
 }
 
+@media screen and (max-width: 978px) {
+
+    section {
+        margin-left: 0%;
+        margin-right: 0%;
+    }
+}
+
 p {
     opacity: 90%;
 }
